adding a style.css and adding the heading search for the user to search up a city

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Weather Dashboard</title>
 </head>
 
@@ -16,3 +13,10 @@
     <header class="container-fluid text-center text-white bg-dark p-3">
         <h1>Weather Dashboard</h1>
     </header>
+
+    <div class="container-fluid" style="max-width: 1400px">
+        <div class="row">
+          <aside class="col-lg-3 pb-3">
+            <h2 id="form-heading" class="mt-1 h3 form-label">
+              Search:
+            </h2>
